# shuuvy-e-commerce-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: .pylintrc  Makefile  pyproject.toml  settings.py
app/app/: settings.py  urls.py
app/brand/: serializers.py  urls.py  views.py
app/category/: serializers.py  urls.py  views.py
app/core/: admin.py  configs.py  models.py  serializers.py
app/core/middlewares/: error_handler_middleware.py
app/core/migrations/: 0001_initial.py  0002_band_product.py  0003_category_tag_subcategory.py  0004_rename_band_brand_rename_band_product_brand.py  0005_promotion_product_category_product_subcategory_and_more.py  0006_rename_category_product_categories_and_more.py  0007_productcolor_productimage_productsize_and_more.py  0008_brand_facebook_contact_brand_followers_and_more.py  0009_category_image_url_subcategory_image_url.py  0010_alter_brand_image_url.py  0011_alter_brand_image_url.py  0012_brand_priority_brand_tags.py  0013_remove_brand_image_url_remove_category_image_url_and_more.py  0014_productcolor_description.py
app/core/services/: digitalocean_service.py  firebase_service.py
app/core/tests/: test_digital_ocean_service.py  test_models.py
app/core/utils/: error_response.py  (+1 more)
app/fixtures/: brand.json  category.json  product.json  subcategory.json
app/product/: serializers.py  urls.py  views.py
app/promotion/: serializers.py  urls.py  views.py
app/subcategory/: serializers.py  urls.py  views.py
app/tag/: serializers.py  urls.py  views.py
(+1 files in other folders)
